2023-10-25T08:23:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6637687490 # 896
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-25
* notice: last 14d: unq all: 2 35
* notice: prev accum: outdated-unq outdated-all / unq all: 266 560 / 281 594
* notice: next accum: outdated-unq outdated-all / unq all: 266 560 / 282 596
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-11 2023-10-25]

2023-10-24T16:22:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6629714921 # 894
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 264 555 / 281 594
* notice: next accum: outdated-unq outdated-all / unq all: 266 560 / 281 594
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-10] / []

2023-10-24T08:22:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6624221466 # 893
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
* notice: last 14d: unq all: 2 35
* notice: prev accum: outdated-unq outdated-all / unq all: 264 555 / 281 593
* notice: next accum: outdated-unq outdated-all / unq all: 264 555 / 281 594
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -3 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-10 2023-10-24]

2023-10-24T01:16:13Z: