@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-25T08:23:12Z",
-  "count" : 2,
+  "timestamp" : "2023-10-25T16:21:26Z",
+  "count" : 1,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -1, +3 ],
+  "count_decinc" : [ -2, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
