@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-25T08:23:12Z",
+  "timestamp" : "2023-10-25T16:21:26Z",
   "count_outdated" : 560,
   "uniques_outdated" : 266,
-  "count" : 596,
+  "count" : 597,
   "uniques" : 282,
   "clones" : [
     {
       "timestamp": "2023-10-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
+      "count_decinc": [ 2, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-10-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
