@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-10-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-10-25T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
