@@ -1,3 +1,12 @@
+2023-10-25T16:21:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6643260846 # 897
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-25
+* notice: last 14d: unq all: 2 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 266 560 / 282 596
+* notice: next accum: outdated-unq outdated-all / unq all: 266 560 / 282 597
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2023-10-11 2023-10-25]
+
 2023-10-25T08:23:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6637687490 # 896
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-25
